# cpast_mono

./: .gitignore  CHANGELOG.md  CLEX_LANGUAGE.md  CODE_OF_CONDUCT.md  Cargo.toml  Makefile  README.md  TESTCASE_LANGUAGE.md  clex.specs.md  correct
.bgit/: config.toml
.bgit/hooks/: post_git_clone  pre_git_add
.config/: nextest.toml
.github/workflows/: audit.yml  ci.yml  general.yml
.sqlx/: query-23550e295b07d0f3f448c62a4fb3a69d7c17e577d15cfb365237360a66887b29.json  query-329dc69833428e53fc465bda562545289b342e4da99b8d7f2af3bacecb68f1fa.json  query-379c67534427b83f2db00aa7a3b7d0d0ddd349a3d426d3c471e7be8bd26d8a21.json  query-454dc4b50939313b9a27bb1248214a34741274d072981c164d37b7efabb7851a.json  query-63bdeb19e8cace053771d10515dd93eb7f583e7612cabd52d634335606a8cfde.json  query-714d10217cb22c18099f99d295abf5ab6f668a3fdd6fd05cc90d9c36b8c67451.json  query-77f589aa5f9cc76f6e2e513529c277c735170ad8eaa54f9a59a95fb7f10ff455.json  query-9f10174a69e27afae0910beaedaa555dd97e74d13204a7a8b66c6becfc448289.json  query-a0e450644a1fc519976daf8f0d397afa3158533b239fbb3b9c23ca391485dd52.json  query-b433f4077acfe5763fe6dc4ebb3c62c89fb8f986cf37c7fa7f06bdb95b52cde3.json  query-c4fad0683162d8a33694a72082fddafda347ba88a493421f0130d2c765c42a6c.json  query-cf3e1d7044a8765a858edb41da4208a269d7a3cfa606783c5eed6579e3ebe589.json
ccode_runner/: CHANGELOG.md  Cargo.toml  README.md
ccode_runner/examples/: combined_limits.rs  execution_limits.rs  time_limit.rs  time_limit_with_input.rs  timeout_infinite_loop.rs
ccode_runner/src/: lang_runner.rs  lib.rs  utils.rs
ccode_runner/src/lang_runner/: file_store.rs  language_ext_mapping.rs  language_name.rs  program_store.rs  runner.rs  runner_error_types.rs
ccode_runner/src/utils/: file_utils.rs  java_classname.rs  program_utils.rs
ccode_runner/tests/: test_execution_limits.rs  test_run_default.rs  test_run_from_text.rs
ccode_runner/tests/programs/: Main.java  main.c  main.cxx  main.js  main.py  main.rb  main.rs
clex/: CHANGELOG.md  Cargo.toml  README.md
clex/src/: lib.rs
clex/src/clex_language/: ast.rs  lexer.rs
clex_gen/: CHANGELOG.md  Cargo.toml  README.md
clex_gen/docs/: CLEX_LANG_SPECS.md
clex_gen/examples/: generate_iter.rs
clex_gen/src/: lib.rs
clex_gen/src/clex_language/: ast.rs  clex_error_type.rs  code_generator.rs  lexer.rs  parser.rs
clex_gen/tests/: error_messages_with_span.rs  generator_integration.rs  generator_iterator_integration.rs  lexer_integration.rs  parser_integration.rs  runner_integration_simulation.rs
clex_llm/: CHANGELOG.md  Cargo.toml  README.md
clex_llm/src/: clex_generator.rs  code_generator.rs  examples.rs  generator.rs  lib.rs  utils.rs
clex_llm/src/clex_generator/: examples.rs  runner.rs  tools.rs
clex_llm/src/code_generator/: examples.rs  runner.rs
clex_llm/tests/: generator_test.rs  test_clex_generator.rs  test_code_generator.rs  utils.rs
cpast/: CHANGELOG.md  Cargo.toml  README.md
cpast/benches/: generate.rs
cpast/examples/: generate.rs  test.rs  test_multilang.rs
cpast/examples/res/: hello.java  hello.py
cpast/src/: cmd.rs  error_types.rs  lib.rs  main.rs
cpast/src/cli/: cli_parser.rs
cpast/src/cmd/: ai.rs  generate.rs  test.rs
cpast/src/error_types/: cli_error.rs
cpast/tests/: clipboard_integration.rs  cpast_test_run_from_text.rs
cpast_api/: .env  Cargo.toml  DEVELOPMENT.md  README.md
cpast_api/configuration/: base.yaml  production.yaml
cpast_api/migrations/: 20250314112401_for_caching_clex_llm_generations.sql  20250314124241_for_caching_scraped_coding_questions.sql  20250314194752_add_clex_column_in_scrape_cache.sql  20250314200304_add_clex_column_scrape_cache_NON_NULL.sql  20250314224733_add_code_gen_llm_cache.sql  20250315085516_add_language_name_column.sql  20250315091418_language_use_text_instead_of_enum.sql  20250315163918_drop_idempotency_and_users_table.sql
cpast_api/scripts/: init_db.sh
cpast_api/src/: configuration.rs  email.rs  startup.rs  telemetry.rs
cpast_api/src/idempotency/: mod.rs
cpast_api/src/routes/api/v1/: mod.rs
cpast_api/src/routes/api/v1/evaluate/: mod.rs  with_code_and_clex.rs  with_code_and_constraint.rs  with_code_and_platform.rs  with_platform.rs  with_shared_id.rs
cpast_api/src/routes/api/v1/share/: get.rs  mod.rs  post.rs
cpast_api/src/routes/home/: home.html
cpast_api/tests/api/: helpers.rs  main.rs
cpast_api/tests/api/evaluate/: mod.rs  test_with_code_and_clex.rs  test_with_code_and_constraint.rs  test_with_code_and_platform.rs  test_with_platform.rs  test_with_shared_id.rs
cpast_api/tests/api/share/: test_get.rs
cpastord/: Cargo.toml
cpastord/src/: main.rs
cscrapper/: CHANGELOG.md  Cargo.toml  README.md
cscrapper/src/: lib.rs  qscrapper.rs
cscrapper/src/qscrapper/: codechef.rs  codeforces.rs
cscrapper/tests/: codechef_test.rs  codeforces_test.rs
docs/clex/: CLEX_LANGUAGE.md  CLEX_LANG_SPECS.md
examples/: generate.rs  test.rs
examples/artifacts/: correct_approach  my_approach
examples/res/: correct_approach.cpp  my_approach.cpp
scripts/: cleanup_test_dbs.py  secrets_for_ci.py
src/: clex_language.rs  lang_runner.rs  language.rs  lib.rs  main.rs  program_store.rs  test_language.rs  utils.rs
src/clex_language/: ast.rs  clex_error_type.rs  generator.rs  lexer.rs  parser.rs
src/cli/: cli_parser.rs
src/cmd/: generate.rs  test.rs
src/lang_runner/: language.rs  program_store.rs  runner.rs  runner_error_types.rs
src/test_language/: ast.rs  generator.rs  language.pl  lexer.rs  parser.rs
src/utils/: file_utils.rs  program_utils.rs
tests/: clipboard_integration.rs  generator_integration.rs  lexer_integration.rs  parser_integration.rs
