[workspace]
members = [
    "ccode_runner",
    "clex_gen",
    "clex_llm",
    "cpast",
    "cpast_api",
    "cpastord",
    "cscrapper",
]
resolver = "3"

[workspace.package]
authors = ["rootCircle <dev.frolics@gmail.com>"]
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/rootCircle/cpast_mono"
homepage = "https://rootcircle.github.io/blog/project/cpast.html"
rust-version = "1.88"

[workspace.dependencies]
actix-session = { version = "0.11.0", features = ["redis-session-rustls"] }
actix-web = "4.11.0"
actix-web-flash-messages = { version = "0.5.0", features = ["cookies"] }
anyhow = "1.0.100"
arboard = "3.6.1"
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
claims = "0.8.0"
clap = { version = "4.5.48", features = ["derive"] }
clap_complete = "4.5.58"
colored = "3.0.0"
config = { version = "0.15.16", default-features = false, features = ["yaml"] }
criterion = "0.7.0" 
fake = "4.4.0"
flaky_test = "0.2.2"
futures = "0.3.31"
headless_chrome = "1.0.18"
hex = "0.4.3"
linkify = "0.10.0"
log = "0.4.28"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
rand = "0.9.2"
regex = "1.11.2"
reqwest = { version = "0.12.23", default-features = false, features = [
    "json",
    "rustls-tls",
    "cookies",
] }
rig-core = "0.20.0"
scraper = "0.24.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.226", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
serial_test = "3.2.0"
sha2 = "0.10.9"
shuttle-runtime = "0.57.0"
shuttle-serenity = "0.57.0"
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
tempfile = "3.23.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-actix-web = "0.7.19"
tracing-bunyan-formatter = { version = "0.3.10" }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = ["registry", "env-filter"] }
unicode-segmentation = "1.12.0"
utoipa = { version = "5.4.0", features = [ "actix_extras" ] }
utoipa-rapidoc = { version = "6.0.0", features = ["actix-web"] }
utoipa-redoc = { version = "6.0.0", features = ["actix-web"] }
utoipa-scalar = { version = "0.3.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web", "vendored"] }
uuid = { version = "1.18.1", features = ["v4", "serde", "v7"] }
validator = "0.20.0"
which = "8.0.0"
wiremock = "0.6.5"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true  # Automatically strip symbols from the binary.
