[package]
name = "ccode_runner"
version = "0.2.0"
description = "Run/compiles files and executes them efficiently"
categories = ["development-tools::testing", "command-line-utilities", "development-tools"]
keywords = ["compiler", "code_runner"]
repository.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
which = { workspace = true }
serde = { features = ["derive"], workspace = true }
utoipa = { workspace = true }
