[package]
name = "ccode_runner"
version = "0.3.7"
description = "Run/compiles files and executes them efficiently"
categories = [
    "development-tools::testing",
    "command-line-utilities",
    "development-tools",
]
keywords = ["compiler", "code_runner"]
repository.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = []
api = ["utoipa"]

[dependencies]
rand = { workspace = true }
regex = { workspace = true }
serde = { features = ["derive"], workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true, optional = true }
wait-timeout = "0.2"
which = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(not(unix))'.dependencies]
sysinfo = "0.31"
