[package]
name = "clex_gen"
version = "0.3.0"
description = "A generator for clex language"
categories = ["development-tools::testing", "command-line-utilities", "development-tools"]
keywords = ["automata", "competitive-program", "generator", "language", "testcase"]
repository.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
rand = { workspace = true }
unicode-segmentation = { workspace = true }
