[package]
name = "clex_llm"
version = "0.3.1"
description = "Generates clex from input format and constraints in natural language using LLM."
categories = ["development-tools::testing", "development-tools"]
keywords = ["automata", "generator", "testcase", "llm", "dsl"]
repository.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ccode_runner = { path = "../ccode_runner", version = "^0.3.3" }
reqwest = { workspace = true }
rig-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
