[package]
name = "cpast_mono"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
cli-clipboard = { version = "0.4.0", optional = true }
which = "6.0.3"
tokio = { version = "1.39.3", features = ["full"] }
futures = "0.3.30"
colored = "2.1.0"
clap_complete = "4.5.24"
clex = { path = "../clex" }

[features]
default = ["clipboard"]
clipboard = ["dep:cli-clipboard"]


