[package]
name = "cpast"
version = "0.10.4"
description = "Run custom testcase with powerful clex language powered generated tool. Ideal for competitive coders. Can test two file and pass & match randomly generated outputs"
categories = [
    "development-tools::testing",
    "command-line-utilities",
    "compilers",
    "development-tools",
]
keywords = [
    "automata",
    "competitive-program",
    "generator",
    "language",
    "testcase",
]
default-run = "cpast"
repository.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = { workspace = true, features = ["wayland-data-control", "image-data"] }
ccode_runner = { version = "^0.3.5", path = "../ccode_runner" }
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true }
clex_gen = { version = "^0.3.4", path = "../clex_gen" }
clex_llm = { version = "^0.3.2", path = "../clex_llm" }
colored = { workspace = true }
cscrapper = { version = "^0.1.3", path = "../cscrapper" }
futures = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
criterion = { workspace = true }
flaky_test = { workspace = true }

[[bench]]
name = "generate"
harness = false
