[package]
name = "cpast_api"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository.workspace = true
authors.workspace = true
homepage.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

#See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "cpast_api"

[dependencies]
actix-session = { workspace = true, features = ["redis-session-rustls"] }
actix-web = { workspace = true }
actix-web-flash-messages = { workspace = true, features = ["cookies"] }
anyhow = { workspace = true }
argon2 = { workspace = true, features = ["std"] }
base64 = { workspace = true }
chrono = { workspace = true, default-features = false, features = ["clock"] }
clex_gen = { path = "../clex_gen" }
clex_llm = { path = "../clex_llm" }
ccode_runner = { path = "../ccode_runner" }
cscrapper = { path = "../cscrapper" }
config = { workspace = true, default-features = false, features = ["yaml"] }
log = { workspace = true }
rand = { workspace = true, features = ["std_rng"] }
reqwest = { workspace = true, default-features = false, features = [
    "cookies",
    "json",
    "rustls-tls",
] }
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde-aux = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, default-features = false, features = [
    "chrono",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "registry"] }
unicode-segmentation = { workspace = true }
utoipa = { workspace = true, features = ["actix_extras"] }
utoipa-rapidoc = { workspace = true, features = ["actix-web"] }
utoipa-redoc = { workspace = true, features = ["actix-web"] }
utoipa-scalar = { workspace = true, features = ["actix-web"] }
utoipa-swagger-ui = { workspace = true, features = ["actix-web", "vendored"] }
validator = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4", "v7"] }

[dev-dependencies]
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
fake = { workspace = true }
wiremock = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
linkify = { workspace = true }
claims = { workspace = true }
