[package]
name = "cscrapper"
version = "0.1.0"
description = "Scrapper for competitive programming websites"
categories = ["development-tools::testing", "development-tools"]
keywords = ["competitive-programming", "scrapper", "website", "codechef", "codeforces"]
repository.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["json"] }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
scraper = { workspace = true }

[dev-dependencies]
tokio.workspace = true
