[package]
name = "cscrapper"
version = "0.1.2"
description = "Scrapper for competitive programming websites"
categories = ["development-tools::testing", "development-tools"]
keywords = ["competitive-coding", "scrapper", "website", "codechef", "codeforces"]
repository.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["json"] }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
scraper = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
headless_chrome = { workspace = true }

[dev-dependencies]
tokio.workspace = true
