[package]
name = "cscrapper"
version = "0.1.2"
description = "Scrapper for competitive programming websites"
categories = ["development-tools::testing", "development-tools"]
keywords = ["competitive-coding", "scrapper", "website", "codechef", "codeforces"]
repository.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
headless_chrome = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
scraper = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
